# numl_val_workspace

./: README.md  developer.yaml  full_workstation.yaml  template.yaml  zelda.yaml
debs/: nasa-indigo-workspace_1.0.0_amd64.deb  nasa-val-system-config_3.0.0.0-2016.05.21.15.36.27-39e7fb83_amd64.deb  nasa-val-system-config_3.0.3.0-2016.07.25.00.36.32-e9f2234d_amd64.deb
install_scripts/: ihmc_install.bash  install.bash  nasa_install.bash  numl_install.bash  useful_software_install.bash
numl_val_motion_tutorials/: CMakeLists.txt  package.xml
numl_val_motion_tutorials/scripts/: control_arms.py  control_chest_orientation.py  control_neck.py  control_pelvis_orientation.py  forward_steps.py
numl_val_motion_tutorials/src/: control_arms.cpp  control_chest_orientation.cpp  control_neck.cpp  control_pelvis_orientation.cpp
